# icx-sdn

./: .env.example  .envrc  .gitignore  AGENTS.md  DESIGN.md  LICENSE  README.md  faucet.yaml  flake.nix  module.nix  network.example.yaml  pyproject.toml  treefmt.toml
.github/workflows/: build-and-push.yml  ci.yml
example/: openbao-tpm-init
lib/: env.nix
scripts/: apply_network.py  catalog_web_api.py  ingest_docs.py  ingest_via_web.py  scrape_web_api.py
src/icx_monitor/: __init__.py  grab_info.py  ingest.py  live.py  parser.py  server.py  textfsm_parser.py  web_api.py
src/icx_monitor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/icx_monitor/templates/: show_chassis.textfsm  show_interface_brief.textfsm  show_lag.textfsm  show_running_config_global.textfsm  show_running_config_interfaces.textfsm  show_running_config_lags.textfsm  show_running_config_vlans.textfsm  show_statistics_brief.textfsm
static/: app.js  index.html  style.css
